--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       position: relative;
       width: 800px;
       margin: 0 auto;
-      margin-top: 100px;
+      margin-top: 80px;
     }
     .barcode-wrap{
       position: fixed;
@@ -54,42 +54,26 @@
 <body>
   <div class="main-bg"></div>
   <div class="main-wrap">
-    <div>：好多装备，，</div>
-    <div>：买买买。。。</div>
-    <br>
-    <br>
+       
     <br>
     <div class="down-link">
       <a href="#">快乐的真三3.9D_v1</a>
     </div>
     <div class="attack-wrap">
       <div>攻击：</div>
-      <div>门口箭塔100~300，螃蟹400~800</div>
+      <div>防卫塔200，螃蟹100</div>
     </div>
     <div class="gold-wrap">
       <div>奖励：</div>
-      <div>步兵100，弓箭手120，螃蟹400~800</div>
+      <div>步兵100，弓箭手150，螃蟹200</div>
     </div>
+    <br>
+    <div>欢迎来<a target="_blank" href="http://tieba.baidu.com/f?kw=%E5%BF%AB%E4%B9%90%E7%9A%84%E7%9C%9F%E4%B8%89">快乐的真三吧</a>^-^
+    </div>
+    <br>
+    <br>
+    <div>：好多钱，，，  // 买买买</div>
     
-    <br>
-    <div style="overflow: hidden" class="barcode-wrap">
-      <div style="float:left;" >
-        <div style="float: left;">
-          <div>微信</div>
-          <div><img src="img/wx.jpg" style="width:85px;" alt=""></div>
-        </div>
-        <div style="float: left;">
-          <div>微博</div>
-          <div style="padding: 4px;"><img src="img/wb.jpg" style="width:80px;" alt=""></div>
-        </div>
-        <div style="float: left;">
-          <div>贴吧:</div>
-          <div><a target="_blank" href="http://tieba.baidu.com/f?kw=%E5%BF%AB%E4%B9%90%E7%9A%84%E7%9C%9F%E4%B8%89">快乐的真三吧</a></div>
-        </div>
-      </div>
-    </div>
-    <br>
-    <div></div>
   </div>
 </body>
 </html>
