--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
        
     <br>
     <div class="down-link">
-      <a href="#">快乐的真三3.9D_v1</a>
+      <a href="https://github.com/happyzhensan/happyzhensan.github.io/releases/download/v1/3.9D_v1.zip">快乐的真三3.9D_v1[下载地图]</a>
     </div>
     <div class="gold-wrap">
       <div>奖励：</div>
@@ -68,11 +68,11 @@
       <div>防卫塔200，螃蟹100</div>
     </div>
     <br>
-    <div>欢迎来<a target="_blank" href="http://tieba.baidu.com/f?kw=%E5%BF%AB%E4%B9%90%E7%9A%84%E7%9C%9F%E4%B8%89">快乐的真三吧</a>^-^
+    <div>欢迎来<a target="_blank" href="http://tieba.baidu.com/f?kw=%E5%BF%AB%E4%B9%90%E7%9A%84%E7%9C%9F%E4%B8%89">快乐的真三吧</a>
     </div>
     <br>
     <br>
-    <div>：好多钱，，，  // 买买买</div>
+    <div>：好多钱，，，  // 买买买  ^-^</div>
     
   </div>
 </body>
