--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
        
     <br>
     <div class="down-link">
-      <a href="https://github.com/happyzhensan/happyzhensan.github.io/releases/download/v1/3.9D_v1.zip">快乐的真三3.9D_v1[下载地图]</a>
+      <a target="_blank" href="https://github.com/happyzhensan/happyzhensan.github.io/releases/download/v1/3.9D_v1.zip">快乐的真三3.9D_v1[下载地图]</a>
     </div>
     <div class="gold-wrap">
       <div>奖励：</div>
