--- a/index.html
+++ b/index.html
@@ -57,15 +57,13 @@
        
     <br>
     <div class="down-link">
-      <a target="_blank" href="https://github.com/happyzhensan/happyzhensan.github.io/releases/download/v1/3.9D_v1.zip">快乐的真三3.9D_v1[下载地图]</a>
+      <a target="_blank" href="http://pan.baidu.com/s/1skKfuNj">真三国无双3.9d_happy[下载地图]</a>
     </div>
     <div class="gold-wrap">
-      <div>奖励：</div>
-      <div>步兵100，弓箭手150，螃蟹200</div>
+      <div>步兵、弓箭手、螃蟹奖励100；炮塔攻击400；无车。 </div>
     </div>
     <div class="attack-wrap">
-      <div>攻击：</div>
-      <div>防卫塔200，螃蟹100</div>
+      <div>好轻松，只想尽快去装B~~~~~~~</div>
     </div>
     <br>
     <div>欢迎来<a target="_blank" href="http://tieba.baidu.com/f?kw=%E5%BF%AB%E4%B9%90%E7%9A%84%E7%9C%9F%E4%B8%89">快乐的真三吧</a>
