--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
        
     <br>
     <div class="down-link">
-      <a target="_blank" href="http://pan.baidu.com/s/1skKfuNj">真三国无双3.9d_happy[下载地图]</a>
+      <a target="_blank" href="http://pan.baidu.com/s/1skKfuNj">真三国无双3.9d_happy</a>
     </div>
     <br>
     <div class="gold-wrap">
@@ -71,7 +71,6 @@
     <br>
     <div>欢迎来<a target="_blank" href="http://tieba.baidu.com/f?kw=%E5%BF%AB%E4%B9%90%E7%9A%84%E7%9C%9F%E4%B8%89">快乐的真三吧</a>
     </div>
-    <br>
     <br>
     <div>：好多钱，，，  // 买买买  ^-^</div>
     
