--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
        
     <br>
     <div class="down-link">
-      <a target="_blank" href="http://pan.baidu.com/s/1skKfuNj">真三国无双3.9d_happy</a>
+      <a target="_blank" href="http://pan.baidu.com/s/1hsienfY">真三国无双3.9d_happy</a>
     </div>
     <br>
     <div class="gold-wrap">
